setup files for part 3

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Guessing Game</title>
 
     <!-- Bootstrap and CSS here-->
-    <link rel='stylesheet' type='text/css' href='style.css'>
+    <link rel='stylesheet' type='text/css' href='css/style.css'>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
     <!-- <link rel='stylesheet' type='text/css' href='bootstrap.css'> -->
   </head>
@@ -49,7 +49,7 @@
     <div id='footer' class='center'>
         <div class='row'>
           <div class='col-sm-5'>
-            <img src='images/fa-logo@2x.png'></img>
+            <img src='img/fa-logo@2x.png'></img>
           </div>
 
           <div class='col-sm-2'>
@@ -57,12 +57,15 @@
           </div>
 
           <div class='col-sm-5'>
-            <img src='images/grace_hopper_academy.png'></img>
+            <img src='img/grace_hopper_academy.png'></img>
           </div>
 
 
         </div>
     </div>
-
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
+    integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
+    crossorigin="anonymous"></script>
+    <script src='js/GuessingGame.js'></script>
   </body>
 </html>
