--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <!-- Bootstrap and CSS here-->
     <link rel='stylesheet' type='text/css' href='css/style.css'>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <!-- <link rel='stylesheet' type='text/css' href='bootstrap.css'> -->
   </head>
   <body>
@@ -28,11 +29,11 @@
           <div id='guesses'>
             <!-- unordered list of guesses -->
             <ul id='guess-list'>
-              <li class='guess'>-</li>
-              <li class='guess'>-</li>
-              <li class='guess'>-</li>
-              <li class='guess'>-</li>
-              <li class='guess'>-</li>
+              <li class='guess'>?</li>
+              <li class='guess'>?</li>
+              <li class='guess'>?</li>
+              <li class='guess'>?</li>
+              <li class='guess'>?</li>
             </ul>
           </div>
 
