new background and font

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <!-- Bootstrap and CSS here-->
     <link rel='stylesheet' type='text/css' href='css/style.css'>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Unica+One" rel="stylesheet">
     <!-- <link rel='stylesheet' type='text/css' href='bootstrap.css'> -->
   </head>
   <body>
@@ -15,8 +16,8 @@
 
         <div id='headers' class='center'>
           <!-- Title and subtitles! -->
-          <h1 id='title'>Guessing Game!</h1>
-          <h2 id='subtitle'>Guess a number between 1-100</h2>
+          <h1 id='title'>Guess the Number!</h1>
+          <h2 id='subtitle'>Pick a number between 1-100</h2>
         </div>
 
         <div id='main'>
